--- a/sw/index.html
+++ b/sw/index.html
@@ -6,22 +6,16 @@
     <link rel="manifest" href="manifest.json" />
 
     <title>Service Worker Test</title>
+    <link rel="stylesheet" href="style.css">
+    <!-- Tailwindcss CDN-->
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.0.2/dist/tailwind.min.css" rel="stylesheet">
+    <script src="script.js" defer></script>
 
 <body>
-    <h1>Service Worker Test</h1>
-    <p>Service Worker is working!kj</p>
-    <script>
-        if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('sw.js').then(function (registration) {
-                console.log('Service Worker registered with scope:', registration.scope);
-            }).catch(function (error) {
-                console.log('Service Worker registration failed:', error);
-            });
-        } else {
-            console.log('Service Worker is not supported');
-        }
-    </script>
+    <h1 class="text-2xl">Service Worker Test123</h1>
+    <p>Service Worker is working!</p>
+    <div id="sw-status"></div>
+    <button id="sw-update" class="bg-yellow-200">Aggiorna</button>
 </body>
 </head>
-
 </html>
